# Spicetifix

./: .gitignore  LICENSE  README.md  automatify.yaml  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  release.yml
automatify/: __main__.py  api.py
automatify/core/: backup.py  config.py  i18n.py  installer.py  spotify_control.py  themer.py  ui_theme.py  utils.py
automatify/ui/: app.py  home.py  settings.py
scripts/: build_exe.py
spicetifix/: __main__.py  api.py
spicetifix/core/: backup.py  config.py  i18n.py  installer.py  themer.py  utils.py
src-tauri/: tauri.conf.json
tests/: test_backup.py  test_config.py  test_ui_theme.py
web/: app.js  index.html  style.css
