[project]
name = "spicetifix"
version = "0.2.0"
description = "Spicetifix — Automated Spotify & Spicetify installer (Tauri Web UI + Python sidecar)"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.31.0",
    "pyyaml>=6.0",
]

[project.scripts]
spicetifix = "spicetifix.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
